--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -11,18 +11,18 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(
-      315deg,
-      rgba(101, 0, 94, 1) 3%,
-      rgba(60, 132, 206, 1) 38%,
-      rgba(48, 238, 226, 1) 68%,
-      rgba(255, 25, 25, 1) 98%
-    );
-    animation: gradient 15s ease infinite;
+    background: 
+    linear-gradient(315deg, rgba(206, 96, 255, 1) 5%, rgba(72, 41, 122, 1) 40%),
+linear-gradient(225deg, rgba(144, 95, 255, 1) 30%, rgba(255, 137, 237, 1) 70%),
+linear-gradient(135deg, rgba(255, 111, 255, 1) 40%, rgba(130, 40, 255, 1) 80%);
+
+    animation: gradient 20s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
     z-index: -10;
   }
+  
+  
   
   @keyframes gradient {
     0% {
